tests/paczka1/small_fuzzy/41614780.err
Error in line 1: SasJC S161 15,7
Error in line 8: PfXQsARo A247 96,3
